@@ -8,6 +8,11 @@ postgresql-common (103) UNRELEASED; urgency=low
   * t/005_PgCommon.t: Add test cases for {set,disable,replace}_conf_value().
   * PgCommon.pm, replace_conf_value(): Do not append the new parameter if the
     old is not found.
+  * PgCommon.pm, {set,disable,replace}_conf_value(): Intercept errors on
+    writing data (which could happen when running out of disk space). Write
+    into a new file and rename it in the end, instead of directly writing into
+    the original file. Thanks to Yann Dirson for the original patch.
+    (Closes: #549206)
 
  -- Martin Pitt <mpitt@debian.org>  Wed, 30 Dec 2009 10:20:41 +0100
 
